fix: phone dark mode error fix

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,6 +3,9 @@ body {
   padding: 0;
   margin: 0;
 }
+:root {
+  color-scheme: light only;
+}
 
 a {
   color: inherit;
